--- a/notebooks/valid.ipynb
+++ b/notebooks/valid.ipynb
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "crude-bearing",
    "metadata": {},
    "outputs": [],
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "productive-invite",
    "metadata": {},
    "outputs": [],
@@ -623,19 +623,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "lesbian-hobby",
    "metadata": {},
    "outputs": [],
    "source": [
     "class PairedModule(pl.LightningModule):\n",
-    "    def __init__(self, params, neg_count, k,\n",
+    "    def __init__(self, params, sampling_strategy_params, loss_params, k,\n",
     "                 lr, weight_decay,\n",
     "                 step_size, gamma,\n",
     "                 base_lr, max_lr, step_size_up, step_size_down,\n",
     "                ):\n",
     "        super().__init__()\n",
-    "        self.save_hyperparameters(ignore=['params', 'loss_fn', 'loss_w'])\n",
+    "        self.save_hyperparameters()\n",
     "        \n",
     "        self.seq_encoder_trx = torch.nn.Sequential(\n",
     "            create_encoder(params['trx_seq'], is_reduce_sequence=True),\n",
@@ -645,9 +645,14 @@
     "            create_encoder(params['click_seq'], is_reduce_sequence=True),\n",
     "#             torch.nn.Linear(params['click_seq.rnn.hidden_size'], params['head_size']),\n",
     "        )\n",
-    "                \n",
+    "              \n",
+    "        sampling_strategy = get_sampling_strategy(sampling_strategy_params)\n",
+    "        self.loss_fn = get_loss(loss_params, sampling_strategy)\n",
+    "        \n",
     "        self.train_precision = PrecisionK(k=k, compute_on_step=False)\n",
     "        self.train_mrr = MeanReciprocalRankK(k=k, compute_on_step=False)\n",
+    "        self.valid_precision = PrecisionK(k=k, compute_on_step=False)\n",
+    "        self.valid_mrr = MeanReciprocalRankK(k=k, compute_on_step=False)\n",
     "        \n",
     "    def configure_optimizers(self):\n",
     "        optim = torch.optim.Adam(self.parameters(), lr=self.hparams.lr, weight_decay=self.hparams.weight_decay)\n",
@@ -665,14 +670,14 @@
     "            scheduler = {'scheduler': sheduler, 'interval': 'step'}\n",
     "        return [optim], [scheduler]\n",
     "    \n",
-    "    def forward(self, batch):\n",
-    "        x_trx, x_click = batch\n",
-    "        z_trx = self.seq_encoder_trx(x_trx)  # B, H\n",
-    "        z_click = self.seq_encoder_click(x_click)  # B, H\n",
+    "#     def forward(self, batch):\n",
+    "#         x_trx, x_click = batch\n",
+    "#         z_trx = self.seq_encoder_trx(x_trx)  # B, H\n",
+    "#         z_click = self.seq_encoder_click(x_click)  # B, H\n",
     "        \n",
-    "        B, H = z_trx.size()\n",
-    "        logits = (z_trx * z_click).sum(dim=1)  # B(trx),\n",
-    "        return logits\n",
+    "#         B, H = z_trx.size()\n",
+    "#         logits = (z_trx * z_click).sum(dim=1)  # B(trx),\n",
+    "#         return logits\n",
     "    \n",
     "    def pos_pairs(self, a, b):\n",
     "        l2 = torch.nn.functional.pairwise_distance(a, b)  # B(trx),\n",
@@ -689,50 +694,171 @@
     "        return neg_pairs\n",
     "        \n",
     "    def training_step(self, batch, batch_idx):\n",
-    "        x_trx, x_click = batch\n",
+    "        (x_trx, l_trx), (x_click, l_click) = batch\n",
     "        z_trx = self.seq_encoder_trx(x_trx)  # B, H\n",
     "        z_click = self.seq_encoder_click(x_click)  # B, H\n",
     "\n",
     "        z_trx = torch.nn.functional.normalize(z_trx, dim=1)\n",
     "        z_click = torch.nn.functional.normalize(z_click, dim=1)\n",
-    "       \n",
+    "\n",
     "        with torch.no_grad():\n",
-    "            l2 = torch.nn.functional.pairwise_distance(z_trx.unsqueeze(1), z_click.unsqueeze(0))\n",
-    "            # B(trx) * B(click)\n",
-    "            self.train_precision(-l2)\n",
-    "            self.train_mrr(-l2)\n",
+    "            n_samples = z_trx.size(0) // (l_trx.max() + 1)\n",
+    "            for i in range(n_samples):\n",
+    "                z_t = z_trx[i::n_samples]\n",
+    "                z_c = z_click[i::n_samples]\n",
+    "                l2 = torch.nn.functional.pairwise_distance(z_t.unsqueeze(1), z_c.unsqueeze(0))\n",
+    "                self.train_precision(-l2)\n",
+    "                self.train_mrr(-l2)\n",
     "        \n",
-    "        B, H = z_trx.size()\n",
-    "        loss_sum, cnt = 0.0, 0\n",
-    "        res = self.pos_pairs(z_trx, z_click)\n",
-    "        self.log('logits_metrics/l2_pos_trx_click', res.mean())\n",
-    "        loss_sum += res.pow(2).sum()\n",
-    "        cnt += res.size(0)\n",
+    "        z_common = torch.cat([z_trx, z_click], dim=0)\n",
+    "        l_common = torch.cat([l_trx, l_click], dim=0)\n",
     "        \n",
-    "        res = self.neg_pairs(z_trx, z_trx)\n",
-    "        self.log('logits_metrics/l2_neg_trx_trx', res.mean())\n",
-    "        loss_sum += torch.relu(0.5 - res).pow(2).sum()\n",
-    "        cnt += res.size(0) * res.size(1)\n",
-    "\n",
-    "        res = self.neg_pairs(z_trx, z_click)\n",
-    "        self.log('logits_metrics/l2_neg_trx_click', res.mean())\n",
-    "        loss_sum += torch.relu(0.5 - res).pow(2).sum()\n",
-    "        cnt += res.size(0) * res.size(1)\n",
-    "\n",
-    "        res = self.neg_pairs(z_click, z_click)\n",
-    "        self.log('logits_metrics/l2_neg_click_click', res.mean())\n",
-    "        loss_sum += torch.relu(0.5 - res).pow(2).sum()\n",
-    "        cnt += res.size(0) * res.size(1)\n",
-    "\n",
-    "        loss = loss_sum / cnt\n",
-    "        self.log('loss/l2', res.mean())\n",
+    "        loss = self.loss_fn(z_common, l_common)\n",
+    "        \n",
     "        return loss\n",
-    "        \n",
+    "\n",
+    "    def validation_step(self, batch, batch_idx):\n",
+    "        (x_trx, l_trx), (x_click, l_click) = batch\n",
+    "        z_trx = self.seq_encoder_trx(x_trx)  # B, H\n",
+    "        z_click = self.seq_encoder_click(x_click)  # B, H\n",
+    "\n",
+    "        z_trx = torch.nn.functional.normalize(z_trx, dim=1)\n",
+    "        z_click = torch.nn.functional.normalize(z_click, dim=1)\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            n_samples = z_trx.size(0) // (l_trx.max() + 1)\n",
+    "            for i in range(n_samples):\n",
+    "                z_t = z_trx[i::n_samples]\n",
+    "                z_c = z_click[i::n_samples]\n",
+    "                l2 = torch.nn.functional.pairwise_distance(z_t.unsqueeze(1), z_c.unsqueeze(0))\n",
+    "                self.valid_precision(-l2)\n",
+    "                self.valid_mrr(-l2)\n",
+    "\n",
     "    def training_epoch_end(self, _):\n",
     "        self.log('train_metrics/precision', self.train_precision, prog_bar=True)\n",
-    "        self.log('train_metrics/mrr', self.train_mrr, prog_bar=True)\n",
+    "        self.log('train_metrics/mrr', self.train_mrr, prog_bar=False)\n",
+    "\n",
+    "    def validation_epoch_end(self, _):\n",
+    "        self.log('valid_metrics/precision', self.valid_precision, prog_bar=True)\n",
+    "        self.log('valid_metrics/mrr', self.valid_mrr, prog_bar=False)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "vietnamese-crawford",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dress-barbados",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"base_lr\":                  0.0005\n",
+       "\"gamma\":                    0.3\n",
+       "\"k\":                        17\n",
+       "\"loss_params\":              ConfigTree([('train', ConfigTree([('loss', 'HistogramLoss')]))])\n",
+       "\"lr\":                       0.004\n",
+       "\"max_lr\":                   0.004\n",
+       "\"params\":                   ConfigTree([('trx_seq', ConfigTree([('trx_encoder', ConfigTree([('use_batch_norm_with_lens', False), ('norm_embeddings', False), ('embeddings_noise', 0.0), ('embeddings', ConfigTree([('mcc_code', ConfigTree([('in', 350), ('out', 32)])), ('currency_rk', ConfigTree([('in', 10), ('out', 4)]))])), ('numeric_values', ConfigTree([('transaction_amt', 'identity')]))])), ('encoder_type', 'rnn'), ('rnn', ConfigTree([('type', 'gru'), ('hidden_size', 32), ('bidir', False), ('trainable_starter', 'static')]))])), ('click_seq', ConfigTree([('trx_encoder', ConfigTree([('use_batch_norm_with_lens', False), ('norm_embeddings', False), ('embeddings_noise', 0.0), ('embeddings', ConfigTree([('cat_id', ConfigTree([('in', 400), ('out', 32)])), ('level_0', ConfigTree([('in', 400), ('out', 16)])), ('level_1', ConfigTree([('in', 400), ('out', 8)])), ('level_2', ConfigTree([('in', 400), ('out', 4)]))])), ('numeric_values', ConfigTree())])), ('encoder_type', 'rnn'), ('rnn', ConfigTree([('type', 'gru'), ('hidden_size', 32), ('bidir', False), ('trainable_starter', 'static')]))]))])\n",
+       "\"sampling_strategy_params\": ConfigTree([('train', ConfigTree([('sampling_strategy', 'AllPositivePair')]))])\n",
+       "\"step_size\":                500\n",
+       "\"step_size_down\":           900\n",
+       "\"step_size_up\":             300\n",
+       "\"weight_decay\":             0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PairedModule.load_from_checkpoint('lightning_logs/version_40/checkpoints/epoch=49-step=999.ckpt').hparams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "biblical-belfast",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ConfigTree([('trx_seq',\n",
+       "             ConfigTree([('trx_encoder',\n",
+       "                          ConfigTree([('use_batch_norm_with_lens', False),\n",
+       "                                      ('norm_embeddings', False),\n",
+       "                                      ('embeddings_noise', 0.0),\n",
+       "                                      ('embeddings',\n",
+       "                                       ConfigTree([('mcc_code',\n",
+       "                                                    ConfigTree([('in', 350),\n",
+       "                                                                ('out', 32)])),\n",
+       "                                                   ('currency_rk',\n",
+       "                                                    ConfigTree([('in', 10),\n",
+       "                                                                ('out',\n",
+       "                                                                 4)]))])),\n",
+       "                                      ('numeric_values',\n",
+       "                                       ConfigTree([('transaction_amt',\n",
+       "                                                    'identity')]))])),\n",
+       "                         ('encoder_type', 'rnn'),\n",
+       "                         ('rnn',\n",
+       "                          ConfigTree([('type', 'gru'),\n",
+       "                                      ('hidden_size', 32),\n",
+       "                                      ('bidir', False),\n",
+       "                                      ('trainable_starter', 'static')]))])),\n",
+       "            ('click_seq',\n",
+       "             ConfigTree([('trx_encoder',\n",
+       "                          ConfigTree([('use_batch_norm_with_lens', False),\n",
+       "                                      ('norm_embeddings', False),\n",
+       "                                      ('embeddings_noise', 0.0),\n",
+       "                                      ('embeddings',\n",
+       "                                       ConfigTree([('cat_id',\n",
+       "                                                    ConfigTree([('in', 400),\n",
+       "                                                                ('out', 32)])),\n",
+       "                                                   ('level_0',\n",
+       "                                                    ConfigTree([('in', 400),\n",
+       "                                                                ('out', 16)])),\n",
+       "                                                   ('level_1',\n",
+       "                                                    ConfigTree([('in', 400),\n",
+       "                                                                ('out', 8)])),\n",
+       "                                                   ('level_2',\n",
+       "                                                    ConfigTree([('in', 400),\n",
+       "                                                                ('out',\n",
+       "                                                                 4)]))])),\n",
+       "                                      ('numeric_values', ConfigTree())])),\n",
+       "                         ('encoder_type', 'rnn'),\n",
+       "                         ('rnn',\n",
+       "                          ConfigTree([('type', 'gru'),\n",
+       "                                      ('hidden_size', 32),\n",
+       "                                      ('bidir', False),\n",
+       "                                      ('trainable_starter', 'static')]))]))])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PairedModule.load_from_checkpoint('lightning_logs/version_37/checkpoints/epoch=49-step=999.ckpt').hparams['params']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "pacific-script",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
