train_distance.ipynb

--- a/notebooks/train_concat.ipynb
+++ b/notebooks/train_concat.ipynb
@@ -281,6 +281,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "detailed-bulletin",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dltranz.seq_encoder.utils import NormEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "id": "lesbian-hobby",
    "metadata": {},
@@ -299,6 +309,7 @@
     "        self.seq_encoder_trx_size = m.embedding_size\n",
     "        self.seq_encoder_trx = torch.nn.Sequential(\n",
     "            m,\n",
+    "            NormEncoder(),\n",
     "#             torch.nn.Linear(m.embedding_size, params['head_size']),\n",
     "#             ResNetBlock(params['head_size']),\n",
     "#             torch.nn.BatchNorm1d(params['head_size']),\n",
@@ -309,6 +320,7 @@
     "        self.seq_encoder_click_size = m.embedding_size\n",
     "        self.seq_encoder_click = torch.nn.Sequential(\n",
     "            m,\n",
+    "            NormEncoder(),\n",
     "#             torch.nn.Linear(m.embedding_size, params['head_size']),\n",
     "#             ResNetBlock(params['head_size']),\n",
     "#             torch.nn.BatchNorm1d(params['head_size']),\n",
@@ -357,9 +369,6 @@
     "        z_trx = self.seq_encoder_trx(x_trx)  # B, H\n",
     "        z_click = self.seq_encoder_click(x_click)  # B, H\n",
     "\n",
-    "        z_trx = torch.nn.functional.normalize(z_trx, dim=1)\n",
-    "        z_click = torch.nn.functional.normalize(z_click, dim=1)\n",
-    "        \n",
     "        B = z_trx.size(0)\n",
     "        device = z_trx.device\n",
     "        z_pairs = torch.cat([\n",
@@ -386,9 +395,6 @@
     "#         z_trx = self.seq_encoder_trx(x_trx)  # B, H\n",
     "#         z_click = self.seq_encoder_click(x_click)  # B, H\n",
     "\n",
-    "#         z_trx = torch.nn.functional.normalize(z_trx, dim=1)\n",
-    "#         z_click = torch.nn.functional.normalize(z_click, dim=1)\n",
-    "        \n",
     "#         B = z_trx.size(0)\n",
     "#         device = z_trx.device\n",
     "#         z_pairs = torch.cat([\n",
