--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_383145/3777615979.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "/tmp/ipykernel_390630/3777615979.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "FOLD_ID = 0\n",
+    "FOLD_ID = 1\n",
     "\n",
     "fold_id_test = FOLD_ID\n",
     "\n",
@@ -103,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
      "execution_count": 5,
@@ -126,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "[14650, 2931, 2931]"
+       "[14651, 2930, 2930]"
       ]
      },
      "execution_count": 6,
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "5175ad5d",
    "metadata": {},
    "outputs": [],
@@ -181,27 +181,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e3dc0d3b",
+   "execution_count": null,
+   "id": "09c4a4e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1min 36s, sys: 16.4 s, total: 1min 53s\n",
-      "Wall time: 2min\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_383145/1841381636.py:24: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  clickstream_embed.reset_index(drop=False, inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
@@ -212,18 +195,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8adb4a8f",
+   "execution_count": null,
+   "id": "9eae0746",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(12226, 403) (2447, 403) (2447, 403)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_click_train = df_click[lambda x: x['user_id'].isin(df_matching_train['rtk'].values)]\n",
     "df_click_valid = df_click[lambda x: x['user_id'].isin(df_matching_valid['rtk'].values)]\n",
@@ -295,7 +270,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_383145/3274736351.py:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/tmp/ipykernel_388152/3274736351.py:25: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  bankclient_embed.reset_index(drop=False, inplace=True)\n"
      ]
     },
@@ -303,9 +278,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(14650, 1159) (2931, 1159) (2931, 1159)\n",
-      "CPU times: user 27 s, sys: 3.36 s, total: 30.4 s\n",
-      "Wall time: 31.7 s\n"
+      "(14651, 1159) (2930, 1159) (2930, 1159)\n",
+      "CPU times: user 27.3 s, sys: 3.24 s, total: 30.6 s\n",
+      "Wall time: 32.2 s\n"
      ]
     }
    ],
@@ -325,17 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "eb238769",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((85475, 1563), (17101, 1563))"
+       "((85481, 1563), (17095, 1563))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "156c3932",
    "metadata": {},
    "outputs": [],
@@ -402,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "id": "8a3686e7",
    "metadata": {},
    "outputs": [
@@ -420,27 +395,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[250]\ttraining's auc: 0.954393\tvalid_1's auc: 0.704681\n",
-      "[500]\ttraining's auc: 0.986512\tvalid_1's auc: 0.727834\n",
-      "[750]\ttraining's auc: 0.995662\tvalid_1's auc: 0.738617\n",
-      "[1000]\ttraining's auc: 0.9986\tvalid_1's auc: 0.744701\n",
-      "[1250]\ttraining's auc: 0.99959\tvalid_1's auc: 0.747882\n",
-      "[1500]\ttraining's auc: 0.999907\tvalid_1's auc: 0.750535\n",
-      "[1750]\ttraining's auc: 0.999977\tvalid_1's auc: 0.751872\n",
-      "[2000]\ttraining's auc: 0.999995\tvalid_1's auc: 0.75272\n",
-      "[2250]\ttraining's auc: 0.999999\tvalid_1's auc: 0.75287\n",
-      "[2500]\ttraining's auc: 1\tvalid_1's auc: 0.754549\n",
-      "[2750]\ttraining's auc: 1\tvalid_1's auc: 0.756304\n",
-      "[3000]\ttraining's auc: 1\tvalid_1's auc: 0.757742\n",
-      "[3250]\ttraining's auc: 1\tvalid_1's auc: 0.758661\n",
-      "[3500]\ttraining's auc: 1\tvalid_1's auc: 0.759595\n",
-      "[3750]\ttraining's auc: 1\tvalid_1's auc: 0.760846\n",
-      "[4000]\ttraining's auc: 1\tvalid_1's auc: 0.761633\n",
-      "[4250]\ttraining's auc: 1\tvalid_1's auc: 0.762598\n",
-      "[4500]\ttraining's auc: 1\tvalid_1's auc: 0.763414\n",
-      "[4750]\ttraining's auc: 1\tvalid_1's auc: 0.763988\n",
-      "[5000]\ttraining's auc: 1\tvalid_1's auc: 0.764434\n",
-      "0.7644\n"
+      "[250]\ttraining's auc: 0.952214\tvalid_1's auc: 0.705454\n",
+      "[500]\ttraining's auc: 0.98683\tvalid_1's auc: 0.727503\n",
+      "[750]\ttraining's auc: 0.99588\tvalid_1's auc: 0.739134\n",
+      "[1000]\ttraining's auc: 0.998739\tvalid_1's auc: 0.745591\n",
+      "[1250]\ttraining's auc: 0.999628\tvalid_1's auc: 0.748597\n",
+      "[1500]\ttraining's auc: 0.9999\tvalid_1's auc: 0.751858\n",
+      "[1750]\ttraining's auc: 0.999973\tvalid_1's auc: 0.753988\n",
+      "[2000]\ttraining's auc: 0.999993\tvalid_1's auc: 0.755017\n",
+      "[2250]\ttraining's auc: 0.999997\tvalid_1's auc: 0.75693\n",
+      "[2500]\ttraining's auc: 0.999999\tvalid_1's auc: 0.75766\n",
+      "[2750]\ttraining's auc: 1\tvalid_1's auc: 0.759157\n",
+      "[3000]\ttraining's auc: 1\tvalid_1's auc: 0.760801\n",
+      "[3250]\ttraining's auc: 1\tvalid_1's auc: 0.762546\n",
+      "[3500]\ttraining's auc: 1\tvalid_1's auc: 0.763049\n",
+      "[3750]\ttraining's auc: 1\tvalid_1's auc: 0.764121\n",
+      "[4000]\ttraining's auc: 1\tvalid_1's auc: 0.764934\n",
+      "[4250]\ttraining's auc: 1\tvalid_1's auc: 0.7658\n",
+      "[4500]\ttraining's auc: 1\tvalid_1's auc: 0.766251\n",
+      "[4750]\ttraining's auc: 1\tvalid_1's auc: 0.766962\n",
+      "[5000]\ttraining's auc: 1\tvalid_1's auc: 0.767648\n",
+      "0.7676\n"
      ]
     }
    ],
@@ -463,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8fda5256",
    "metadata": {},
    "outputs": [],
@@ -475,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "501e0751",
    "metadata": {},
    "outputs": [],
@@ -524,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "8f111a92",
    "metadata": {},
    "outputs": [
@@ -532,8 +507,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1h 34min 22s, sys: 32.9 s, total: 1h 34min 55s\n",
-      "Wall time: 13min 10s\n"
+      "CPU times: user 1h 21min 12s, sys: 30.3 s, total: 1h 21min 43s\n",
+      "Wall time: 11min 26s\n"
      ]
     }
    ],
@@ -545,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "id": "a5f48926",
    "metadata": {},
    "outputs": [
@@ -553,9 +528,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pre: 0.3825, mrr: 0.1822, r1: 0.2468\n",
-      "CPU times: user 114 ms, sys: 4.2 ms, total: 119 ms\n",
-      "Wall time: 118 ms\n"
+      "pre: 0.3751, mrr: 0.1819, r1: 0.2450\n",
+      "CPU times: user 119 ms, sys: 16 µs, total: 119 ms\n",
+      "Wall time: 119 ms\n"
      ]
     }
    ],
@@ -587,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "id": "016634c7",
    "metadata": {},
    "outputs": [],
@@ -608,10 +583,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3f78d550",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [20]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "assert False"
    ]
@@ -626,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dca13ae2",
    "metadata": {},
    "outputs": [],
@@ -636,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f2c2edda",
    "metadata": {},
    "outputs": [],
@@ -663,10 +650,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "54fb03c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pre: 0.37577, mrr: 0.182, r1: 0.245\n"
+     ]
+    }
+   ],
    "source": [
     "preds = np.load('data/test/submission.npz', allow_pickle=True)['arr_0']\n",
     "\n",
@@ -678,15 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "091b62ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92cf6f4e",
+   "id": "65a45e6d",
    "metadata": {},
    "outputs": [],
    "source": []
