shared rnn model

--- a/notebooks/prepare_features.ipynb
+++ b/notebooks/prepare_features.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FOLD_ID = 1"
+    "FOLD_ID = 0"
    ]
   },
   {
@@ -179,7 +179,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "1"
       ]
      },
      "execution_count": 13,
@@ -216,7 +216,7 @@
     {
      "data": {
       "text/plain": [
-       "[11721, 2930, 2930]"
+       "[11720, 2930, 2931]"
       ]
      },
      "execution_count": 15,
@@ -253,7 +253,8 @@
     "                              for i in range(folds_count) \n",
     "                              if i not in (fold_id_test, fold_id_valid)])\n",
     "df_trx_valid = trx_types(pd.read_csv(f'data/transactions_{fold_id_valid}.csv'))\n",
-    "df_trx_test = trx_types(pd.read_csv(f'data/transactions_{fold_id_test}.csv'))"
+    "df_trx_test = trx_types(pd.read_csv(f'data/transactions_{fold_id_test}.csv'))\n",
+    "df_trx_puzzle = trx_types(pd.read_csv(f'data/transactions_unmatched.csv'))"
    ]
   },
   {
@@ -281,7 +282,8 @@
     "                              for i in range(folds_count) \n",
     "                              if i not in (fold_id_test, fold_id_valid)])\n",
     "df_click_valid = click_types(pd.read_csv(f'data/clickstream_{fold_id_valid}.csv'))\n",
-    "df_click_test = click_types(pd.read_csv(f'data/clickstream_{fold_id_test}.csv'))"
+    "df_click_test = click_types(pd.read_csv(f'data/clickstream_{fold_id_test}.csv'))\n",
+    "df_click_puzzle = click_types(pd.read_csv(f'data/clickstream_unmatched.csv'))"
    ]
   },
   {
@@ -574,7 +576,8 @@
    "source": [
     "features_trx_train = dict(trx_to_torch(preprocessor_trx.fit_transform(df_trx_train)))\n",
     "features_trx_valid = dict(trx_to_torch(preprocessor_trx.transform(df_trx_valid)))\n",
-    "features_trx_test = dict(trx_to_torch(preprocessor_trx.transform(df_trx_test)))"
+    "features_trx_test = dict(trx_to_torch(preprocessor_trx.transform(df_trx_test)))\n",
+    "features_trx_puzzle = dict(trx_to_torch(preprocessor_trx.transform(df_trx_puzzle)))"
    ]
   },
   {
@@ -586,7 +589,8 @@
    "source": [
     "features_click_train = dict(click_to_torch(preprocessor_click.fit_transform(df_click_train)))\n",
     "features_click_valid = dict(click_to_torch(preprocessor_click.transform(df_click_valid)))\n",
-    "features_click_test = dict(click_to_torch(preprocessor_click.transform(df_click_test)))"
+    "features_click_test = dict(click_to_torch(preprocessor_click.transform(df_click_test)))\n",
+    "features_click_puzzle = dict(click_to_torch(preprocessor_click.transform(df_click_puzzle)))"
    ]
   },
   {
@@ -604,14 +608,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/features.pickle', 'wb') as f:\n",
+    "with open(f'data/features_f{FOLD_ID}.pickle', 'wb') as f:\n",
     "    pickle.dump((\n",
     "        features_trx_train,\n",
     "        features_trx_valid,\n",
     "        features_trx_test,\n",
+    "        features_trx_puzzle,\n",
     "        features_click_train,\n",
     "        features_click_valid,\n",
     "        features_click_test,\n",
+    "        features_click_puzzle,\n",
     "    ), f)"
    ]
   },
@@ -625,21 +631,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 10.4 s, sys: 2.17 s, total: 12.6 s\n",
-      "Wall time: 12.6 s\n"
+      "CPU times: user 13.6 s, sys: 4.18 s, total: 17.8 s\n",
+      "Wall time: 17.8 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "with open('data/features.pickle', 'rb') as f:\n",
+    "with open(f'data/features_f{FOLD_ID}.pickle', 'rb') as f:\n",
     "    (\n",
     "        features_trx_train,\n",
     "        features_trx_valid,\n",
     "        features_trx_test,\n",
+    "        features_trx_puzzle,\n",
     "        features_click_train,\n",
     "        features_click_valid,\n",
     "        features_click_test,\n",
+    "        features_click_puzzle,\n",
     "    ) = pickle.load(f)"
    ]
   },
